--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,16 +1,23 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --text-color: #000028;
+  --title-color: #DB00FF;
+  --title-colot-shadow: #FF0070;
+  --background-color: #FF0070;
+  --card-text-color: #F1B2CE;
+  --now-hover: rgb(255 0 112 / 0.4);
+  --bg-color: #000028;
+  --bachground-image: url(../images/cover-image-dark.png);
 }
 
-.theme-dark .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: dark) {
+  :root {
+  --text-color: #000028;
+  --title-color: #DB00FF;
+  --title-colot-shadow: #FF0070;
+  --background-color: #FF0070;
+  --card-text-color: #F1B2CE;
+  --now-hover: rgb(255 0 112 / 0.4);
+  --bg-color: #000028;
+  --bachground-image: url(../images/cover-image-dark.png);
+  }
 }
