--- a/styles/light.css
+++ b/styles/light.css
@@ -1,16 +1,23 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-colot-shadow: #FF8DCB;
+  --background-color: #FF8DCB;
+  --card-text-color: #353430;
+  --now-hover: rgb(50 49 45 / 0.4);
+  --bachground-image: url(../images/cover-image-light.png);
+  --bg-color: #FFF1F7;
 }
 
-.theme-light .page {
-  /* Вам также нужно будет написать ряд подобных селекторов */
+@media (prefers-color-scheme: light) {
+  :root {
+  --text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-colot-shadow: #FF8DCB;
+  --background-color: #FF8DCB;
+  --card-text-color: #353430;
+  --now-hover: rgb(50 49 45 / 0.4);
+  --bachground-image: url(../images/cover-image-light.png);
+  --bg-color: #FFF1F7;
+  }
 }
