--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,457 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  background-color: var(--bg-color);
+  background-position: center;
+  background-attachment: fixed;
+  font-family: 'IBM Plex Mono', monospace;
+  background-size: cover;
+}
+
+.header {
+  position: relative;
+  display: grid;
+  justify-items: end;
+  align-items: center;
+  min-height: 668px;
+  height: 100vh;
+  padding: 10px;
+  grid-template-rows: 1fr min-content 1fr;
+  background-image: var(--bachground-image);
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  font-size: 18px;  
+  font-weight: 400;  
+  line-height: 18px;
+  color: var(--background-color);
+  border: 1px solid transparent;             
+  cursor: pointer; 
+  position: relative;
+  display: block;
+  text-transform: lowercase;
+  padding: 2px 13px;
+}
+
+.header__theme-menu-button_active {
+  pointer-events: none;
+  border: 1px solid var(--background-color);
+}
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--now-hover);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid var(--background-color);
+}
+
+.decorated-zone::before {
+content: '';
+position: absolute;
+top: 10px;
+right: 10px;
+width: 25px;
+height: 25px;
+border-top: 1px solid var(--background-color);
+border-right: 1px solid var(--background-color);
+}
+
+.decorated-zone::after {
+content: '';
+position: absolute;
+bottom: 10px;
+left: 10px;
+width: 25px;
+height: 25px;
+border-bottom: 1px solid var(--background-color);
+border-left: 1px solid var(--background-color);
+}
+
+.rec {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--background-color);
+  font-family: 'IBM Plex Mono', monospace;
+  position: absolute;
+  right: 38px;
+  top: 10px;
+}
+
+.rec::after {
+  position: absolute;
+  content: '';
+  top: 8px;
+  right: -19px;
+  border-radius: 50%;
+  inline-size: 9px;
+  block-size: 9px;
+  background-color: var(--background-color);
+  box-shadow: 0 0 4px 2px var(--background-color);
+}
+
+.title__name {
+  font-weight: 700;
+  line-height: 83%;
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--title-colot-shadow);
+  font-size: var(--title-size);
+  justify-self: start;
+  margin-left: -20px;
+}
+
+.title__text {
+font-size: 18px;
+font-weight: 700;
+line-height: 23.4px;
+}
+
+.title-decor {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.main {
+  padding: 40px 10px;
+}
+
+.content:not(:last-of-type) {
+  margin-bottom: 50px; 
+}
+
+.content__link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0 var(--title-colot-shadow);
+}
+
+.content__link:hover {
+  border-bottom: 1px solid var(--card-text-color);
+}
+
+.content__link:focus {
+  outline: none;
+}
+
+.content__link:focus-visible {
+  outline: 1px solid var(--card-text-color);
+}
+
+.content__name {
+font-size: 18px;
+font-weight: 700;
+line-height: 23.4px;
+color: var(--background-color);
+margin-bottom: 20px;
+}
+
+.content__title {
+font-size: 18px;
+font-weight: 700;
+line-height: 23.4px;
+color: var(--text-color);
+margin-top: 20px;
+font-family: 'IBM Plex Mono', monospace;
+}
+
+.content__text {
+font-size: 18px;
+font-weight: 400;
+line-height: 23.4px;
+color: var(--card-text-color);
+margin-top: 10px;
+}
+
+.image {
+ display: grid;
+ grid-template-columns: 1fr;
+ gap: 10px;
+ margin-top: 10px;
+ width: 355px;
+}
+
+.image__list {
+  width: 100%;
+  object-fit: cover;
+}
+
+.footer {
+  position: relative;
+  display: grid;
+  place-items: center;
+  min-height: 668px;
+  height: 100vh;
+  padding: 10px;
+}
+
+.footer__name {
+  font-size: var(--title-size);
+  font-weight: 700;
+  line-height: 83%;
+  color: var(--title-color);
+  text-shadow: 4px 4px 0 var(--title-colot-shadow);
+}
+
+@media (width >= 768px) {
+.header {
+  min-height: 1024px;
+  height: 100vh;
+  padding: 20px;
+}
+
+.title__name {
+  font-size: var(--title-size);
+}
+
+.title__text {
+font-size: 18px;
+font-weight: 700;
+line-height: 23.4px;
+max-width: 364px;
+}
+
+.decorated-zone::before {
+top: 20px;
+right: 20px;
+}
+
+.decorated-zone::after {
+bottom: 20px;
+left: 20px;
+}
+
+.rec {
+  right: 48px;
+  top: 20px;
+}
+
+.main {
+  padding: 60px 20px;
+}
+
+.main__container {
+  display: grid;
+  gap: 20px;
+}
+
+.content__name {
+  max-width: 236px;
+}
+
+.content:not(:last-of-type) {
+  margin-bottom: 80px; 
+}
+
+.content__title {
+  margin-top: 0;
+}
+
+.content__why {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.content__how {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+}
+
+.content__title-last {
+  margin-top: 20px;
+}
+
+.image {
+ display: grid;
+ gap: 20px;
+ margin-top: 20px;
+ grid-template-columns: repeat(3, 1fr);
+ width: 100%;
+}
+
+.image__list {
+  object-fit: cover;
+  height: 100%;
+}
+
+.img__sunset {
+grid-column: 1/3;
+grid-row: 1/2;
+}
+
+.img__ice-cream {
+grid-column: 3/4;
+grid-row: 1/3;
+}
+
+.img__tape {
+grid-column: 1/2;
+grid-row: 2/4;
+}
+
+.img__books {
+grid-column: 2/3;
+grid-row: 2/3;
+}
+
+.img__steet {
+grid-column: 2/4;
+grid-row: 3/4;
+}
+
+.footer {
+  min-height: 1024px;
+  height: 100vh;
+  padding: 20px;
+}
+
+.footer__name {
+  font-size: var(--title-size);
+}
+}
+
+@media (width >= 1024px) {
+.header {
+  min-height: 768px;
+  height: 100vh;
+}
+
+.header__theme-menu {
+  display: grid;
+  justify-self: center;
+  align-self: start;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: row;
+}
+
+.title__name {
+  font-size: 157px;
+}
+
+.title__text {
+font-size: 18px;
+font-weight: 700;
+line-height: 23.4px;
+max-width: 491px;
+justify-self: end;
+}
+
+.decorated-zone::before {
+top: 20px;
+right: 20px;
+}
+
+.decorated-zone::after {
+bottom: 20px;
+left: 20px;
+}
+
+.rec {
+  right: 48px;
+  top: 20px;
+}
+
+.main {
+  padding: 60px 20px;
+}
+
+.main__container {
+  display: grid;
+  gap: 20px;
+}
+
+.content__name {
+  max-width: 314px;
+}
+
+.content:not(:last-of-type) {
+  margin-bottom: 80px; 
+}
+
+.content__title {
+  margin-top: 0;
+}
+
+.content__why {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
+}
+
+.main__container__what {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.content__how {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 10px;
+}
+
+.content__title-last {
+  margin-top: 18px;
+}
+
+.image {
+ display: grid;
+ gap: 20px;
+ margin-top: 20px;
+ grid-template-columns: repeat(3, 1fr);
+ width: 100%;
+}
+
+.image__list {
+  object-fit: cover;
+  height: 100%;
+}
+
+.img__sunset {
+grid-column: 1/3;
+grid-row: 1/2;
+}
+
+.img__ice-cream {
+grid-column: 3/4;
+grid-row: 1/3;
+}
+
+.img__tape {
+grid-column: 1/2;
+grid-row: 2/4;
+}
+
+.img__books {
+grid-column: 2/3;
+grid-row: 2/3;
+}
+
+.img__steet {
+grid-column: 2/4;
+grid-row: 3/4;
+}
+
+.footer {
+  min-height: 768px;
+  height: 100vh;
+  padding: 20px;
+}
+
+.footer__name {
+  font-size: 157px;
+}
 }
