--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,27 @@
-/*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
-*/
+:root {
+  --text-color: #000028;
+  --title-color: #DB00FF;
+  --title-colot-shadow: #FF0070;
+  --background-color: #FF0070;
+  --card-text-color: #F1B2CE;
+  --now-hover: rgb(255 0 112 / 0.4);
+  --bg-color: #000028;
+  --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --bachground-image: url(../images/cover-image-dark.png);
+}
+
+@media (width >= 768px) {
+  .root {
+    --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+}
+
+@media (width >= 1024px) {
+  .root {
+    --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .theme-light .rec {
+    display: none;
+  }
+}
