--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,20 +8,11 @@
   --bg-color: #000028;
   --title-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   --bachground-image: url(../images/cover-image-dark.png);
+  --color-decor: #FF0070;
 }
 
 @media (width >= 768px) {
   .root {
     --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-}
-
-@media (width >= 1024px) {
-  .root {
-    --title-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-
-  .theme-light .rec {
-    display: none;
   }
 }
